# GeoGridFusion

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-books.yml  publish-to-pypi.yml
docs/source/: api.rst  conf.py  index.rst
docs/source/_autosummary/: geogridfusion.display.display_user_paths.rst  geogridfusion.geogridfusion.add_user_path.rst  geogridfusion.index.get_search_tree.rst  geogridfusion.index.unform_coordinates_array.rst  geogridfusion.namespace_utils.empty_search_trees.rst
docs/source/whatsnew/releases/: v0.1.0.rst
ds_templates/: pvgis-tmy-template.nc  templates.ipynb
geogridfusion/: __init__.py  config.py  display.py  geogridfusion.py  index.py  namespace_utils.py  templates.py
geogridstore/: __init__.py  config.py  display.py  geogridstore.py  index.py  namespace_utils.py  operations.py  templates.py
grid-points-baked/: baking-points-index.ipynb
tests/: test_index.py
tutorials/: adding-a-store.ipynb  motivator.ipynb  sphere.ipynb  weather_demo.ipynb  working-with-data.ipynb  yaml.ipynb
tutorials/weather_data/: bottom_left_dataframe.csv  bottom_right_dataframe.csv  overlapping_dataframe.csv
